@@ -4,8 +4,11 @@ import lombok.Getter;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
+
+/**
+ *
+ */
 @Getter
 public enum Edition {
 
@@ -19,9 +22,9 @@ public enum Edition {
         this.displayName = displayName;
     }
 
-    public static List<String> getAllDisplayNames() {
+    public static List<String> getAllEditionNames() {
         return Arrays.stream(values())
                 .map(Edition::getDisplayName)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
